refactore: move from hardcoded html markup to array for menu

--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!doctype html>
 <html lang="en">
   <head>
+    <script src="script.js" defer></script>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="style.css" />
@@ -53,7 +54,7 @@
           </div>
           <div class="nav-links">
             <div class="links-container">
-              <div class="navbar-link-container">
+              <!-- <div class="navbar-link-container">
                 <span role="button" aria-expanded="true" class="navbar-link">
                   Why Spring
                 </span>
@@ -174,7 +175,7 @@
                     <a href="#">Authors</a>
                   </li>
                 </ul>
-              </div>
+              </div> -->
               <div><a class="link" href="#">Tanzu Spring</a></div>
             </div>
           </div>
