feat: add arrays of objects for rendering items and menu

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html lang="en">
   <head>
-    <script src="script.js" defer></script>
+    <script type="module" src="scripts/script.js" defer></script>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="style.css" />
@@ -54,128 +54,6 @@
           </div>
           <div class="nav-links">
             <div class="links-container">
-              <!-- <div class="navbar-link-container">
-                <span role="button" aria-expanded="true" class="navbar-link">
-                  Why Spring
-                </span>
-                <ul class="dropdown">
-                  <li>
-                    <a href="#">Overview</a>
-                  </li>
-                  <li>
-                    <a href="#">Generative AI</a>
-                  </li>
-                  <li>
-                    <a href="#">Microservises</a>
-                  </li>
-                  <li>
-                    <a href="#">Reactive</a>
-                  </li>
-                  <li>
-                    <a href="#">Event Driven</a>
-                  </li>
-                  <li>
-                    <a href="#">Cloud</a>
-                  </li>
-                  <li>
-                    <a href="#">Web Applications</a>
-                  </li>
-                  <li>
-                    <a href="#">Serverless</a>
-                  </li>
-                  <li>
-                    <a href="#">Batching</a>
-                  </li>
-                </ul>
-              </div>
-              <div class="navbar-link-container">
-                <span role="button" aria-expanded="true" class="navbar-link">
-                  Learn
-                </span>
-                <ul class="dropdown">
-                  <li>
-                    <a href="#">Overview</a>
-                  </li>
-                  <li>
-                    <a href="#">Quickstart</a>
-                  </li>
-                  <li>
-                    <a href="#">Guides</a>
-                  </li>
-                  <li>
-                    <a href="#">Blog</a>
-                  </li>
-                  <li>
-                    <a href="#">Security Advisoriers</a>
-                  </li>
-                </ul>
-              </div>
-              <div class="navbar-link-container">
-                <span role="button" aria-expanded="true" class="navbar-link">
-                  Projects
-                </span>
-                <ul class="dropdown">
-                  <li>
-                    <a href="#">Overview</a>
-                  </li>
-                  <li>
-                    <a href="#">Spring Boot</a>
-                  </li>
-                  <li>
-                    <a href="#">Spring Framework</a>
-                  </li>
-                  <li>
-                    <a href="#">Spring Cloud</a>
-                  </li>
-                  <li>
-                    <a href="#">Spring Cloud Data Flow</a>
-                  </li>
-                  <li>
-                    <a href="#">Spring Data</a>
-                  </li>
-                  <li>
-                    <a href="#">Spring Integration</a>
-                  </li>
-                  <li>
-                    <a href="#">Spring Batch</a>
-                  </li>
-                  <li>
-                    <a href="#">Spring Security</a>
-                  </li>
-                  <li>
-                    <a href="#">Spring AI</a>
-                  </li>
-                </ul>
-              </div>
-              <div class="navbar-link-container">
-                <span role="button" aria-expanded="true" class="navbar-link">
-                  Academy
-                </span>
-                <ul class="dropdown">
-                  <li>
-                    <a href="#">Courses</a>
-                  </li>
-                  <li>
-                    <a href="#">Get Certified</a>
-                  </li>
-                </ul>
-              </div>
-              <div class="navbar-link-container">
-                <span role="button" aria-expanded="true" class="navbar-link">
-                  Community
-                </span>
-                <ul class="dropdown">
-                  <li>
-                    <a href="#">Community</a>
-                  </li>
-                  <li>
-                    <a href="#">Events</a>
-                  </li>
-                  <li>
-                    <a href="#">Authors</a>
-                  </li>
-                </ul>
-              </div> -->
               <div><a class="link" href="#">Tanzu Spring</a></div>
             </div>
           </div>
@@ -204,142 +82,7 @@
       </div>
       <div>
         <div class="items-container">
-          <div class="list-container">
-            <article class="list-item">
-              <a href="#">
-                <div class="list-item-header">
-                  <div class="image">
-                    <img src="assets/icons/spring-boot.svg" alt="Spring Boot" />
-                  </div>
-                  <div><h1 class="list-item-title">Spring Boot</h1></div>
-                </div>
-                <div>
-                  <p class="list-item-description">
-                    Takes an opinionated view of building Spring applications
-                    and gets you up and running as quickly as possible.
-                  </p>
-                  <div>
-                    <span class="list-item-version">3.5.3</span>
-                    <span class="additional-versions">+9 versions</span>
-                  </div>
-                </div>
-              </a>
-            </article>
-            <article class="list-item">
-              <a href="#">
-                <div class="list-item-header">
-                  <div class="image">
-                    <img
-                      src="assets/icons/spring-framework.svg"
-                      alt="Spring Framework"
-                    />
-                  </div>
-                  <div><h1 class="list-item-title">Spring Framework</h1></div>
-                </div>
-                <div>
-                  <p class="list-item-description">
-                    Provides core support for dependency injection, transaction
-                    management, web apps, data access, messaging, and more.
-                  </p>
-                  <div>
-                    <span class="list-item-version">3.5.3</span>
-                    <span class="additional-versions">+9 versions</span>
-                  </div>
-                </div>
-              </a>
-            </article>
-            <article class="list-item">
-              <a href="#">
-                <div class="list-item-header">
-                  <div class="image">
-                    <img src="assets/icons/spring-data.svg" alt="Spring Boot" />
-                  </div>
-                  <div><h1 class="list-item-title">Spring Data</h1></div>
-                </div>
-                <div>
-                  <p class="list-item-description">
-                    Provides a consistent approach to data access – relational,
-                    non-relational, map-reduce, and beyond.
-                  </p>
-                  <div>
-                    <span class="list-item-version">3.5.3</span>
-                    <span class="additional-versions">+9 versions</span>
-                  </div>
-                </div>
-              </a>
-            </article>
-            <article class="list-item">
-              <a href="#">
-                <div class="list-item-header">
-                  <div class="image">
-                    <img
-                      src="assets/icons/spring-cloud.svg"
-                      alt="Spring Boot"
-                    />
-                  </div>
-                  <div><h1 class="list-item-title">Spring Cloud</h1></div>
-                </div>
-                <div>
-                  <p class="list-item-description">
-                    Provides a set of tools for common patterns in distributed
-                    systems. Useful for building and deploying microservices.
-                  </p>
-                  <div>
-                    <span class="list-item-version">3.5.3</span>
-                    <span class="additional-versions">+9 versions</span>
-                  </div>
-                </div>
-              </a>
-            </article>
-            <article class="list-item">
-              <a href="#">
-                <div class="list-item-header">
-                  <div class="image">
-                    <img
-                      src="assets/icons/spring-data-flow.svg"
-                      alt="Spring Boot"
-                    />
-                  </div>
-                  <div>
-                    <h1 class="list-item-title">Spring Cloud Data Flow</h1>
-                  </div>
-                </div>
-                <div>
-                  <p class="list-item-description">
-                    Provides an orchestration service for composable data
-                    microservice applications on modern runtimes.
-                  </p>
-                  <div>
-                    <span class="list-item-version">3.5.3</span>
-                    <span class="additional-versions">+9 versions</span>
-                  </div>
-                </div>
-              </a>
-            </article>
-            <article class="list-item">
-              <a href="#">
-                <div class="list-item-header">
-                  <div class="image">
-                    <img
-                      src="assets/icons/spring-security.svg"
-                      alt="Spring Boot"
-                    />
-                  </div>
-                  <div><h1 class="list-item-title">Spring Security</h1></div>
-                </div>
-                <div>
-                  <p class="list-item-description">
-                    Protects your application with comprehensive and extensible
-                    authentication and authorization support.
-                  </p>
-                  <div>
-                    <span class="list-item-version">3.5.3</span>
-                    <span class="additional-versions">+9 versions</span>
-                  </div>
-                </div>
-              </a>
-            </article>
-          </div>
+          <div class="list-container"></div>
         </div>
       </div>
     </main>
