feat: implement open/hide functionality for side panel and configured eslint

--- a/index.html
+++ b/index.html
@@ -30,6 +30,19 @@
               />
             </button>
           </div>
+          <div class="cross-icon hidden">
+            <button>
+              <img
+                src="assets/icons/cross-svgrepo-com (1).svg"
+                alt="cross-icon"
+                height="32"
+                width="32"
+              />
+            </button>
+          </div>
+        </div>
+        <div class="side-menu hidden">
+          <div class="side-menu-navigation"></div>
         </div>
 
         <div class="header-container">
