feat: implement search input

--- a/index.html
+++ b/index.html
@@ -94,6 +94,28 @@
         </section>
       </div>
       <div>
+        <div role="search" aria-label="search" class="search-container">
+          <label for="search">Search the site:</label>
+          <input
+            type="search"
+            id="site-search"
+            placeholder="Search..."
+            autocomplete="off"
+          />
+          <button
+            type="button"
+            id="clear-btn"
+            class="clear-input-btn hidden"
+            aria-label="clear search"
+          >
+            <img
+              src="assets/icons/cross-icon-green.svg"
+              alt="clear search"
+              height="24"
+              width="24"
+            />
+          </button>
+        </div>
         <div class="items-container">
           <div class="list-container"></div>
         </div>
