--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
               />
             </a>
           </div>
-          <div class="burger-menu">
+          <div class="burger-menu" id="burger-menu">
             <button>
               <img
                 src="assets/icons/burger-menu-svgrepo-com.svg"
@@ -30,7 +30,7 @@
               />
             </button>
           </div>
-          <div class="cross-icon hidden">
+          <div class="cross-icon hidden" id="cross-icon">
             <button>
               <img
                 src="assets/icons/cross-svgrepo-com (1).svg"
@@ -41,8 +41,8 @@
             </button>
           </div>
         </div>
-        <div class="side-menu hidden">
-          <div class="side-menu-navigation"></div>
+        <div class="side-menu hidden" id="side-menu">
+          <div class="side-menu-navigation" id="side-menu-navigation"></div>
         </div>
 
         <div class="header-container">
@@ -66,7 +66,7 @@
             </button>
           </div>
           <div class="nav-links">
-            <div class="links-container">
+            <div class="links-container" id="links-container">
               <div><a class="link" href="#">Tanzu Spring</a></div>
             </div>
           </div>
@@ -95,7 +95,7 @@
       </div>
       <div>
         <div class="items-container">
-          <div class="list-container"></div>
+          <div class="list-container" id="list-container"></div>
         </div>
       </div>
     </main>
